# MineCraft_Yishiyu_Edition

./: .gitignore  CMakeLists.txt
Shaders/: BasicFragment.glsl  BasicVertex.glsl  SectionVertex.glsl
notes/1.环境配置/: 1.环境配置.md
notes/2. 第一人称相机的实现/: 2.第一人称相机的实现.md
notes/3.渲染方块/: 3.渲染方块.md
notes/4.渲染世界/: 4.渲染世界.md
notes/5.修改方块/: 5.修改方块.md
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Entity.h  Main.cpp  Mesh.h  Model.cpp  Model.h  glad.c
src/Maths/: Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  glm.h
src/Model/: Model.cpp  Model.h  SectionModel.cpp  SectionModel.h
src/Player/: Player.cpp  Player.h
src/Renderer/: CubeRenderer.cpp  CubeRenderer.h  QuadRenderer.cpp  QuadRenderer.h  RenderMaster.cpp  RenderMaster.h  SectionRenderer.cpp  SectionRenderer.h
src/Shaders/: BasicShader.cpp  BasicShader.h  SectionShader.cpp  SectionShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h
src/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
src/Texture/: BasicTexture.cpp  BasicTexture.h  TextureAtlas.cpp  TextureAtlas.h
src/Util/: FileUtil.cpp  FileUtil.h  NonCopyable.h  Random.cpp  Random.h  Singleton.h
src/World/: World.cpp  World.h  WorldConstants.h
src/World/Block/: Block.cpp  Block.h  BlockDB.cpp  BlockDB.h  BlockData.cpp  BlockData.h  BlockDict.h  BlockType.cpp  BlockType.h
src/World/BlockTypes/: BlockData.cpp  BlockData.h  BlockId.h  BlockTypes.h  ChunkBlock.cpp  ChunkBlock.h
src/World/Chunk/: Chunk.cpp  Chunk.h  IChunk.h  Section.cpp  Section.h  SectionModelBuilder.cpp  SectionModelBuilder.h
